--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <div class="cls0">
         <nav style="position: fixed;">
             <ul type="None">
-                <li><a href="Parralax.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="About.html">About</a></li>
                 <li><a href="Login.html">Login/SignUp</a></li>
                 <li><a href="Contact.html">Contact Us</a></li>
